recursion.cons.occurrences.Occurrences.scala.error
Compilation error:
Occurrences:11: error: not found: value L
  return 1 + occurrences(L.tail,v);
                         ^