recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  if (l.head == Nil){
      return 0;
  }

  else{
     if (l.head == v){
       
     
  return 1 + occurrences(L.tail,v);
  }

  else{
      return occurrences(l.tail,v);
  }
  }
}